# budget_planner

./: .env.dev  .env.dist  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  requiremnets.txt
.github/workflows/: budget_planner-ci.yaml
api/: serializers.py  views.py
bank_account/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
billings/: urls.py  views.py
budget_planner/: asgi.py  env.py  settings.py  urls.py  wsgi.py
category/: admin.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
category/tests/: test_model.py  (+2 more)
dashboard/: dash_app.py  dash_app_monthly_category_compare.py  dash_app_monthly_compare.py  views.py
notifications/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
notifications_type/: admin.py  apps.py  models.py
possession_status/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
regular_expenses/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
saving_goal/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
static/: gulpfile.mjs  template.html
system_notification/: admin.py  apps.py  models.py
templates/: base.html  base_action.html  billing.html  dashboard.html  footer.html  navbar.html  notifications.html  sidebar.html  tables.html
transaction/: admin.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
users/: factories.py  forms.py  tests.py  urls.py  views.py
wallet/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
(+116 files in other folders)
