[tool.poetry]
name = "budget-planner"
version = "0.1.0"
description = "Budget planner"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
django = "^5.1.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.0.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
coverage = "^7.6.9"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-filter = "^24.3"
django-plotly-dash = "^2.4.3"
channels = "^4.2.0"
daphne = "^4.1.2"
redis = "^5.2.1"
django-redis = "^5.4.0"
channels-redis = "^4.2.1"
pandas = "^2.2.3"
dash-bootstrap-components = "^1.7.1"
django-verify-email = "^3.0.3"
six = "^1.17.0"
dash = "^2.18"
factory-boy = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
